Source/Alternet.UI.Pal/Api/WebBrowser.Api.h

using namespace Alternet::UI;
ALTERNET_UI_API WebBrowser* WebBrowser_Create_()
{
    return MarshalExceptions<WebBrowser*>([&](){
        return new WebBrowser();
    });
}
ALTERNET_UI_API c_bool WebBrowser_GetIsEdgeBackendEnabled_()
{
    return MarshalExceptions<c_bool>([&](){
        return WebBrowser::GetIsEdgeBackendEnabled();
    });
}
ALTERNET_UI_API void WebBrowser_SetIsEdgeBackendEnabled_(c_bool value)
{
    MarshalExceptions<void>([&](){
        WebBrowser::SetIsEdgeBackendEnabled(value);
    });
}
ALTERNET_UI_API c_bool WebBrowser_GetHasBorder_(WebBrowser* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetHasBorder();
    });
}
ALTERNET_UI_API void WebBrowser_SetHasBorder_(WebBrowser* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetHasBorder(value);
    });
}
ALTERNET_UI_API c_bool WebBrowser_GetCanGoBack_(WebBrowser* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetCanGoBack();
    });
}
ALTERNET_UI_API c_bool WebBrowser_GetCanGoForward_(WebBrowser* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetCanGoForward();
    });
}
ALTERNET_UI_API c_bool WebBrowser_GetCanCut_(WebBrowser* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetCanCut();
    });
}
ALTERNET_UI_API c_bool WebBrowser_GetCanCopy_(WebBrowser* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetCanCopy();
    });
}
ALTERNET_UI_API c_bool WebBrowser_GetCanUndo_(WebBrowser* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetCanUndo();
    });
}
ALTERNET_UI_API c_bool WebBrowser_GetCanRedo_(WebBrowser* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetCanRedo();
    });
}
ALTERNET_UI_API c_bool WebBrowser_GetIsBusy_(WebBrowser* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetIsBusy();
    });
}
ALTERNET_UI_API c_bool WebBrowser_GetCanPaste_(WebBrowser* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetCanPaste();
    });
}
ALTERNET_UI_API float WebBrowser_GetZoomFactor_(WebBrowser* obj)
{
    return MarshalExceptions<float>([&](){
        return obj->GetZoomFactor();
    });
}
ALTERNET_UI_API void WebBrowser_SetZoomFactor_(WebBrowser* obj, float value)
{
    MarshalExceptions<void>([&](){
        obj->SetZoomFactor(value);
    });
}
ALTERNET_UI_API c_bool WebBrowser_GetHasSelection_(WebBrowser* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetHasSelection();
    });
}
ALTERNET_UI_API NativeStringSpan_C WebBrowser_GetSelectedSource_(WebBrowser* obj)
{
    return MarshalExceptions<NativeStringSpan_C>([&](){
        return obj->GetSelectedSource();
    });
}
ALTERNET_UI_API NativeStringSpan_C WebBrowser_GetSelectedText_(WebBrowser* obj)
{
    return MarshalExceptions<NativeStringSpan_C>([&](){
        return obj->GetSelectedText();
    });
}
ALTERNET_UI_API NativeStringSpan_C WebBrowser_GetPageSource_(WebBrowser* obj)
{
    return MarshalExceptions<NativeStringSpan_C>([&](){
        return obj->GetPageSource();
    });
}
ALTERNET_UI_API void WebBrowser_Undo_(WebBrowser* obj)
{
    MarshalExceptions<void>([&](){
        obj->Undo();
    });
}
ALTERNET_UI_API void WebBrowser_Redo_(WebBrowser* obj)
{
    MarshalExceptions<void>([&](){
        obj->Redo();
    });
}
ALTERNET_UI_API void WebBrowser_Print_(WebBrowser* obj)
{
    MarshalExceptions<void>([&](){
        obj->Print();
    });
}
ALTERNET_UI_API void WebBrowser_RemoveAllUserScripts_(WebBrowser* obj)
{
    MarshalExceptions<void>([&](){
        obj->RemoveAllUserScripts();
    });
}
ALTERNET_UI_API c_bool WebBrowser_AddScriptMessageHandler_(WebBrowser* obj, NativeStringSpan* name)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->AddScriptMessageHandler(*name);
    });
}
ALTERNET_UI_API c_bool WebBrowser_RemoveScriptMessageHandler_(WebBrowser* obj, NativeStringSpan* name)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->RemoveScriptMessageHandler(*name);
    });
}
ALTERNET_UI_API void WebBrowser_RunScriptAsync_(WebBrowser* obj, NativeStringSpan* javascript, void* clientData)
{
    MarshalExceptions<void>([&](){
        obj->RunScriptAsync(*javascript, clientData);
    });
}
ALTERNET_UI_API void WebBrowser_CreateBackend_(WebBrowser* obj)
{
    MarshalExceptions<void>([&](){
        obj->CreateBackend();
    });
}
ALTERNET_UI_API int WebBrowser_GetBackendOS_()
{
    return MarshalExceptions<int>([&](){
        return WebBrowser::GetBackendOS();
    });
}
ALTERNET_UI_API void WebBrowser_SetEdgePath_(NativeStringSpan* path)
{
    MarshalExceptions<void>([&](){
        WebBrowser::SetEdgePath(*path);
    });
}
ALTERNET_UI_API NativeStringSpan_C WebBrowser_GetCurrentTitle_(WebBrowser* obj)
{
    return MarshalExceptions<NativeStringSpan_C>([&](){
        return obj->GetCurrentTitle();
    });
}
ALTERNET_UI_API NativeStringSpan_C WebBrowser_GetCurrentURL_(WebBrowser* obj)
{
    return MarshalExceptions<NativeStringSpan_C>([&](){
        return obj->GetCurrentURL();
    });
}
ALTERNET_UI_API void WebBrowser_LoadURL_(WebBrowser* obj, NativeStringSpan* url)
{
    MarshalExceptions<void>([&](){
        obj->LoadURL(*url);
    });
}
ALTERNET_UI_API NativeStringSpan_C WebBrowser_RunScript_(WebBrowser* obj, NativeStringSpan* javascript)
{
    return MarshalExceptions<NativeStringSpan_C>([&](){
        return obj->RunScript(*javascript);
    });
}
ALTERNET_UI_API void WebBrowser_SetPage_(WebBrowser* obj, NativeStringSpan* text, NativeStringSpan* baseUrl)
{
    MarshalExceptions<void>([&](){
        obj->SetPage(*text, *baseUrl);
    });
}
ALTERNET_UI_API c_bool WebBrowser_AddUserScript_(WebBrowser* obj, NativeStringSpan* javascript, int injectionTime)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->AddUserScript(*javascript, injectionTime);
    });
}
ALTERNET_UI_API void WebBrowser_SetEventCallback_(WebBrowser::WebBrowserEventCallbackType callback)
{
    WebBrowser::SetEventCallback(callback);
}