Source/Alternet.UI/Native/WebBrowser.Generated.cs

        
        public void Undo()
        {
            CheckDisposed();
            NativeApi.WebBrowser_Undo_(NativePointer);
        }
        
        public void Redo()
        {
            CheckDisposed();
            NativeApi.WebBrowser_Redo_(NativePointer);
        }
        
        public void Print()
        {
            CheckDisposed();
            NativeApi.WebBrowser_Print_(NativePointer);
        }
        
        public void RemoveAllUserScripts()
        {
            CheckDisposed();
            NativeApi.WebBrowser_RemoveAllUserScripts_(NativePointer);
        }
        
        public bool AddScriptMessageHandler(Alternet.UI.NativeStringSpan name)
        {
            CheckDisposed();
            var name_Native = name.ToNative();
return NativeApi.WebBrowser_AddScriptMessageHandler_(NativePointer, ref name_Native);
        }
        
        public bool RemoveScriptMessageHandler(Alternet.UI.NativeStringSpan name)
        {
            CheckDisposed();
            var name_Native = name.ToNative();
return NativeApi.WebBrowser_RemoveScriptMessageHandler_(NativePointer, ref name_Native);
        }
        
        public void RunScriptAsync(Alternet.UI.NativeStringSpan javascript, System.IntPtr clientData)
        {
            CheckDisposed();
            var javascript_Native = javascript.ToNative();
NativeApi.WebBrowser_RunScriptAsync_(NativePointer, ref javascript_Native, clientData);
        }
        
        public void CreateBackend()
        {
            CheckDisposed();
            NativeApi.WebBrowser_CreateBackend_(NativePointer);
        }
        
        public static int GetBackendOS()
        {
            return NativeApi.WebBrowser_GetBackendOS_();
        }
        
        public static void SetEdgePath(Alternet.UI.NativeStringSpan path)
        {
            var path_Native = path.ToNative();
NativeApi.WebBrowser_SetEdgePath_(ref path_Native);
        }
        
        public Alternet.UI.NativeStringSpan GetCurrentTitle()
        {
            CheckDisposed();
            return NativeApi.WebBrowser_GetCurrentTitle_(NativePointer);
        }
        
        public Alternet.UI.NativeStringSpan GetCurrentURL()
        {
            CheckDisposed();
            return NativeApi.WebBrowser_GetCurrentURL_(NativePointer);
        }
        
        public void LoadURL(Alternet.UI.NativeStringSpan url)
        {
            CheckDisposed();
            var url_Native = url.ToNative();
NativeApi.WebBrowser_LoadURL_(NativePointer, ref url_Native);
        }
        
        public Alternet.UI.NativeStringSpan RunScript(Alternet.UI.NativeStringSpan javascript)
        {
            CheckDisposed();
            var javascript_Native = javascript.ToNative();
return NativeApi.WebBrowser_RunScript_(NativePointer, ref javascript_Native);
        }
        
        public void SetPage(Alternet.UI.NativeStringSpan text, Alternet.UI.NativeStringSpan baseUrl)
        {
            CheckDisposed();
            var text_Native = text.ToNative();
var baseUrl_Native = baseUrl.ToNative();
NativeApi.WebBrowser_SetPage_(NativePointer, ref text_Native, ref baseUrl_Native);
        }
        
        public bool AddUserScript(Alternet.UI.NativeStringSpan javascript, int injectionTime)
        {
            CheckDisposed();
            var javascript_Native = javascript.ToNative();
return NativeApi.WebBrowser_AddUserScript_(NativePointer, ref javascript_Native, injectionTime);
        }
        
        static GCHandle eventCallbackGCHandle;
        public static WebBrowser? GlobalObject;
        
        static void SetEventCallback()
        {
            if (!eventCallbackGCHandle.IsAllocated)
            {
                var sink = new NativeApi.WebBrowserEventCallbackType((obj, e, parameter) =>
                    UI.Application.HandleThreadExceptions(() =>
                    {
                        var w = NativeObject.GetFromNativePointer<WebBrowser>(obj, p => new WebBrowser(p));
                        w ??= GlobalObject;
                        if (w == null) return IntPtr.Zero;
                        return w.OnEvent(e, parameter);
                    }
                    )
                );
                eventCallbackGCHandle = GCHandle.Alloc(sink);
                NativeApi.WebBrowser_SetEventCallback_(sink);
            }
        }
        
        IntPtr OnEvent(NativeApi.WebBrowserEvent e, IntPtr parameter)
        {
            switch (e)
            {
                case NativeApi.WebBrowserEvent.Navigating:
                {
                    var ea = new NativeEventArgs<WebBrowserEventData>(MarshalEx.PtrToStructure<WebBrowserEventData>(parameter));
                    OnPlatformEventNavigating(ea); return ea.Result;
                }
                case NativeApi.WebBrowserEvent.Navigated:
                {
                    var ea = new NativeEventArgs<WebBrowserEventData>(MarshalEx.PtrToStructure<WebBrowserEventData>(parameter));
                    OnPlatformEventNavigated(ea); return ea.Result;
                }
                case NativeApi.WebBrowserEvent.Loaded:
                {
                    var ea = new NativeEventArgs<WebBrowserEventData>(MarshalEx.PtrToStructure<WebBrowserEventData>(parameter));
                    OnPlatformEventLoaded(ea); return ea.Result;
                }
                case NativeApi.WebBrowserEvent.Error:
                {
                    var ea = new NativeEventArgs<WebBrowserEventData>(MarshalEx.PtrToStructure<WebBrowserEventData>(parameter));
                    OnPlatformEventError(ea); return ea.Result;
                }
                case NativeApi.WebBrowserEvent.NewWindow:
                {
                    var ea = new NativeEventArgs<WebBrowserEventData>(MarshalEx.PtrToStructure<WebBrowserEventData>(parameter));
                    OnPlatformEventNewWindow(ea); return ea.Result;
                }
                case NativeApi.WebBrowserEvent.TitleChanged:
                {
                    var ea = new NativeEventArgs<WebBrowserEventData>(MarshalEx.PtrToStructure<WebBrowserEventData>(parameter));
                    OnPlatformEventTitleChanged(ea); return ea.Result;
                }
                case NativeApi.WebBrowserEvent.FullScreenChanged:
                {
                    var ea = new NativeEventArgs<WebBrowserEventData>(MarshalEx.PtrToStructure<WebBrowserEventData>(parameter));
                    OnPlatformEventFullScreenChanged(ea); return ea.Result;
                }
                case NativeApi.WebBrowserEvent.ScriptMessageReceived:
                {
                    var ea = new NativeEventArgs<WebBrowserEventData>(MarshalEx.PtrToStructure<WebBrowserEventData>(parameter));
                    OnPlatformEventScriptMessageReceived(ea); return ea.Result;
                }
                case NativeApi.WebBrowserEvent.ScriptResult:
                {
                    var ea = new NativeEventArgs<WebBrowserEventData>(MarshalEx.PtrToStructure<WebBrowserEventData>(parameter));
                    OnPlatformEventScriptResult(ea); return ea.Result;
                }
                case NativeApi.WebBrowserEvent.BeforeBrowserCreate:
                {
                    var ea = new NativeEventArgs<WebBrowserEventData>(MarshalEx.PtrToStructure<WebBrowserEventData>(parameter));
                    OnPlatformEventBeforeBrowserCreate(ea); return ea.Result;
                }
                default: throw new Exception("Unexpected WebBrowserEvent value: " + e);
            }
        }
        
        
        [SuppressUnmanagedCodeSecurity]
        public class NativeApi : NativeApiProvider
        {
            static NativeApi() => Initialize();
            
            [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
            public delegate IntPtr WebBrowserEventCallbackType(IntPtr obj, WebBrowserEvent e, IntPtr param);
            
            public enum WebBrowserEvent
            {
                Navigating,
                Navigated,
                Loaded,
                Error,
                NewWindow,
                TitleChanged,
                FullScreenChanged,
                ScriptMessageReceived,
                ScriptResult,
                BeforeBrowserCreate,
            }
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void WebBrowser_SetEventCallback_(WebBrowserEventCallbackType callback);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern IntPtr WebBrowser_Create_();
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool WebBrowser_GetIsEdgeBackendEnabled_();
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void WebBrowser_SetIsEdgeBackendEnabled_(bool value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool WebBrowser_GetHasBorder_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void WebBrowser_SetHasBorder_(IntPtr obj, bool value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool WebBrowser_GetCanGoBack_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool WebBrowser_GetCanGoForward_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool WebBrowser_GetCanCut_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool WebBrowser_GetCanCopy_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool WebBrowser_GetCanUndo_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool WebBrowser_GetCanRedo_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool WebBrowser_GetIsBusy_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool WebBrowser_GetCanPaste_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern float WebBrowser_GetZoomFactor_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void WebBrowser_SetZoomFactor_(IntPtr obj, float value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool WebBrowser_GetHasSelection_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern Alternet.UI.NativeStringSpan WebBrowser_GetSelectedSource_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern Alternet.UI.NativeStringSpan WebBrowser_GetSelectedText_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern Alternet.UI.NativeStringSpan WebBrowser_GetPageSource_(IntPtr obj);
